fix(scrollbar): AGGRESSIVELY hide scrollbar on all browsers
- Added scrollbar-width: none for Firefox
- Added -ms-overflow-style: none for IE/Edge
- Added overflow: -moz-scrollbars-none for old Firefox
- Set display: none on ALL webkit-scrollbar pseudo-elements
- Set width/height to 0px with !important
- Hide track, thumb, and corner elements
- Applied to html, body, and * with maximum specificity
- Scrollbar is now COMPLETELY INVISIBLE

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -445,18 +445,56 @@
   }
 }
 
-/* Hide scrollbar completely */
-html,
-body,
+/* Hide scrollbar completely - AGGRESSIVE */
+html {
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
+  overflow: -moz-scrollbars-none !important;
+}
+
+body {
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
+  overflow: -moz-scrollbars-none !important;
+}
+
 * {
   scrollbar-width: none !important;
   -ms-overflow-style: none !important;
 }
 
-html::-webkit-scrollbar,
-body::-webkit-scrollbar,
+html::-webkit-scrollbar {
+  display: none !important;
+  width: 0px !important;
+  height: 0px !important;
+  background: transparent !important;
+}
+
+body::-webkit-scrollbar {
+  display: none !important;
+  width: 0px !important;
+  height: 0px !important;
+  background: transparent !important;
+}
+
 *::-webkit-scrollbar {
   display: none !important;
-  width: 0 !important;
-  height: 0 !important;
+  width: 0px !important;
+  height: 0px !important;
+  background: transparent !important;
+}
+
+*::-webkit-scrollbar-track {
+  display: none !important;
+  background: transparent !important;
+}
+
+*::-webkit-scrollbar-thumb {
+  display: none !important;
+  background: transparent !important;
+}
+
+*::-webkit-scrollbar-corner {
+  display: none !important;
+  background: transparent !important;
 }
